register customer filter ui fix on mobile sereen

--- a/src/assets/scss/customize/customize.scss
+++ b/src/assets/scss/customize/customize.scss
@@ -2771,7 +2771,6 @@ a {
         h2 {
             @include mobile {
                 margin-bottom: 0;
-                font-size: 1.3rem;
             }
         }
     }
